--- a/Multiplayers Game.xcodeproj/xcshareddata/xcschemes/castle.xcscheme
+++ b/Multiplayers Game.xcodeproj/xcshareddata/xcschemes/castle.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "5B4FED4823E8A6D300C300A0"
-               BuildableName = "castle.app"
-               BlueprintName = "castle"
-               ReferencedContainer = "container:castle.xcodeproj">
+               BuildableName = "Multiplayers Game.app"
+               BlueprintName = "Multiplayers Game"
+               ReferencedContainer = "container:Multiplayers Game.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5B4FED4823E8A6D300C300A0"
-            BuildableName = "castle.app"
-            BlueprintName = "castle"
-            ReferencedContainer = "container:castle.xcodeproj">
+            BuildableName = "Multiplayers Game.app"
+            BlueprintName = "Multiplayers Game"
+            ReferencedContainer = "container:Multiplayers Game.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -56,9 +56,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5B4FED4823E8A6D300C300A0"
-            BuildableName = "castle.app"
-            BlueprintName = "castle"
-            ReferencedContainer = "container:castle.xcodeproj">
+            BuildableName = "Multiplayers Game.app"
+            BlueprintName = "Multiplayers Game"
+            ReferencedContainer = "container:Multiplayers Game.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -75,9 +75,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "5B4FED4823E8A6D300C300A0"
-            BuildableName = "castle.app"
-            BlueprintName = "castle"
-            ReferencedContainer = "container:castle.xcodeproj">
+            BuildableName = "Multiplayers Game.app"
+            BlueprintName = "Multiplayers Game"
+            ReferencedContainer = "container:Multiplayers Game.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
