Added unit test and reorganized some part of the code

--- a/Multiplayers Game.xcodeproj/xcshareddata/xcschemes/castle.xcscheme
+++ b/Multiplayers Game.xcodeproj/xcshareddata/xcschemes/castle.xcscheme
@@ -26,8 +26,19 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      codeCoverageEnabled = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "5B3553DB243B754D00ED912E"
+               BuildableName = "Multiplayers GameTests.xctest"
+               BlueprintName = "Multiplayers GameTests"
+               ReferencedContainer = "container:Multiplayers Game.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
       <MacroExpansion>
          <BuildableReference
